--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic SlotGame</title>
+    <title>Implementasi Game Peluang Berbasis Web Servis.</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +17,7 @@
     <div class="d-flex align-items-center justify-content-center h-100">
       <div class="card">
         <div class="card-body">
-          <h2>Slot Nusantara</h2>
+          <h2>Implementasi Game Peluang Berbasis Web Servis.</h2>
           <p class="text-center">Register Here</p>
           <div class="form-group mt-3">
             <label for="username">Username</label>
